# octra-foundry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/octra-cli/: Cargo.toml
crates/octra-cli/src/: io.rs  main.rs  rpc_client.rs
crates/octra-cli/src/cast/: circle.rs  mod.rs  pvac.rs  wallet.rs
crates/octra-cli/src/forge/: bind.rs  build.rs  coverage.rs  create.rs  mod.rs  verification.rs  verify.rs
crates/octra-cli/tests/: cast_circle_put.rs  cast_register_pvac.rs  cast_wallet.rs  forge_bind.rs  forge_build.rs  forge_inspect.rs  tool_parity.rs
crates/octra-core/: Cargo.toml
crates/octra-core/src/: address.rs  circle.rs  lib.rs  sig.rs  tx.rs  util.rs  verify.rs  wallet_enc.rs
crates/octra-mock-rpc/: Cargo.toml
crates/octra-mock-rpc/src/: lib.rs  main.rs
crates/octra-mock-rpc/src/aml/: host_fhe.rs  mod.rs
crates/octra-mock-rpc/tests/: chain_id_binding.rs  v2_dispatch.rs
crates/octraforge/: Cargo.toml  DESIGN.md
crates/octraforge/src/: aml_coverage.rs  aml_invariants.rs  cheatcodes.rs  fork.rs  invariant.rs  lib.rs  mock.rs  octravpn.rs  ou_cost_model.rs  wallet.rs
crates/octraforge/src/forge_std/: assertions.rs  std_cheats.rs  std_storage.rs  std_utils.rs
crates/octraforge/tests/: aml_coverage.rs  aml_fuzz.rs  bond_slash.rs  cheatcodes.rs  demo.rs  multidevice.rs  ou_snapshot.rs  slash_double_sign.rs  v2_lifecycle.rs
