[workspace]
resolver = "2"
members = [
    "crates/octra-core",
    "crates/octraforge",
    "crates/octra-mock-rpc",
    "crates/octra-cli",
]

[workspace.lints.clippy]
all              = { level = "warn", priority = -1 }
pedantic         = { level = "warn", priority = -1 }
nursery          = { level = "warn", priority = -1 }
# Pragmatic relaxations: these would otherwise drown signal.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
multiple_crate_versions = "allow"
similar_names           = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_lossless           = "allow"
cast_possible_wrap      = "allow"
items_after_statements  = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
unused_async            = "allow"
future_not_send         = "allow"
return_self_not_must_use = "allow"
missing_const_for_fn    = "allow"
struct_excessive_bools  = "allow"
struct_field_names      = "allow"
redundant_pub_crate     = "allow"
option_if_let_else      = "allow"
or_fun_call             = "allow"
unwrap_used             = "allow"
cognitive_complexity    = "allow"
too_many_arguments      = "allow"
doc_markdown            = "allow"
doc_overindented_list_items = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.lints.rust]
unsafe_code             = "deny"
unreachable_pub         = "warn"
unused_must_use         = "deny"
trivial_casts           = "warn"
trivial_numeric_casts   = "warn"
# `kani` is the cfg name the Kani symbolic-execution tool sets on the
# rustc invocation it owns. We use `#[cfg(kani)]` to gate Kani-only
# harnesses; tell the unexpected_cfgs lint not to complain.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["octra-foundry contributors"]
rust-version = "1.75"

[workspace.dependencies]
aes-gcm            = "0.10"
anyhow             = "1"
axum               = "0.7"
base64             = "0.22"
bs58               = "0.5"
chacha20poly1305   = "0.10"
clap               = { version = "4", features = ["derive", "env"] }
curve25519-dalek   = { version = "4", features = ["serde", "digest", "rand_core"] }
ed25519-dalek      = { version = "2", features = ["rand_core", "serde"] }
hex                = "0.4"
hkdf               = "0.12"
parking_lot        = "0.12"
pbkdf2             = { version = "0.12", default-features = false, features = ["hmac"] }
proptest           = "1"
rand               = "0.8"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_with         = "3"
sha2               = "0.10"
tempfile           = "3"
thiserror          = "1"
tokio              = { version = "1", features = ["full"] }
tower-http         = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zeroize            = { version = "1", features = ["derive"] }

# Internal crates
octra-core    = { path = "crates/octra-core" }
octra-mock-rpc = { path = "crates/octra-mock-rpc" }
octraforge    = { path = "crates/octraforge" }
