[package]
name = "octra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Thin Octra primitives: address codec, ed25519 signatures, branch-coverage hooks."

[dependencies]
bs58          = { workspace = true }
ed25519-dalek = { workspace = true }
parking_lot   = { workspace = true }
rand          = { workspace = true }
serde         = { workspace = true }
serde_with    = { workspace = true }
sha2          = { workspace = true }
thiserror     = { workspace = true }
zeroize       = { workspace = true }

[lints]
workspace = true
