[package]
name = "octra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Thin Octra primitives: address codec, ed25519 signatures, branch-coverage hooks."

[dependencies]
aes-gcm            = { workspace = true }
anyhow             = { workspace = true }
base64             = { workspace = true }
bs58               = { workspace = true }
chacha20poly1305   = { workspace = true }
ed25519-dalek      = { workspace = true }
hex                = { workspace = true }
hkdf               = { workspace = true }
parking_lot        = { workspace = true }
pbkdf2             = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_with         = { workspace = true }
sha2               = { workspace = true }
thiserror          = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
