[package]
name = "octra-mock-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Anvil-equivalent in-memory Octra mock JSON-RPC chain for dApp tests."
publish = false

[[bin]]
name = "octra-mock-rpc"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core = { path = "../../../octra/crates/octravpn-core" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
