[package]
name = "octraforge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Foundry-style test framework for Octra programs."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
octra-core         = { workspace = true }
octra-mock-rpc     = { path = "../octra-mock-rpc" }

curve25519-dalek   = { workspace = true }
ed25519-dalek      = { workspace = true }
hex                = { workspace = true }
parking_lot        = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
thiserror          = { workspace = true }
proptest           = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
